default-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "RouteTableAssociationId": "rtbassoc-023d976167fb4fced", 
                    "Main": true, 
                    "RouteTableId": "rtb-0daefd39a9099ec66"
                }
            ], 
            "RouteTableId": "rtb-0daefd39a9099ec66", 
            "VpcId": "vpc-0a728e6edcfcca992", 
            "PropagatingVgws": [], 
            "Tags": [], 
            "Routes": [
                {
                    "GatewayId": "local", 
                    "DestinationCidrBlock": "10.0.0.0/16", 
                    "State": "active", 
                    "Origin": "CreateRouteTable"
                }
            ], 
            "OwnerId": "939986559092"
        }, 
        {
            "Associations": [
                {
                    "RouteTableAssociationId": "rtbassoc-d787fca9", 
                    "Main": true, 
                    "RouteTableId": "rtb-23d4df5c"
                }
            ], 
            "RouteTableId": "rtb-23d4df5c", 
            "VpcId": "vpc-0f65e975", 
            "PropagatingVgws": [], 
            "Tags": [
                {
                    "Value": "default-route-table", 
                    "Key": "Name"
                }
            ], 
            "Routes": [
                {
                    "GatewayId": "local", 
                    "DestinationCidrBlock": "172.31.0.0/16", 
                    "State": "active", 
                    "Origin": "CreateRouteTable"
                }, 
                {
                    "GatewayId": "igw-afc536d4", 
                    "DestinationCidrBlock": "0.0.0.0/0", 
                    "State": "active", 
                    "Origin": "CreateRoute"
                }
            ], 
            "OwnerId": "939986559092"
        }, 
        {
            "Associations": [
                {
                    "RouteTableAssociationId": "rtbassoc-044e268fb2f0c6cd5", 
                    "Main": true, 
                    "RouteTableId": "rtb-007eee0073c5fa626"
                }
            ], 
            "RouteTableId": "rtb-007eee0073c5fa626", 
            "VpcId": "vpc-0b4df71f240ec8fd7", 
            "PropagatingVgws": [], 
            "Tags": [
                {
                    "Value": "custom-route-table", 
                    "Key": "Name"
                }
            ], 
            "Routes": [
                {
                    "GatewayId": "local", 
                    "DestinationCidrBlock": "10.0.0.0/16", 
                    "State": "active", 
                    "Origin": "CreateRouteTable"
                }
            ], 
            "OwnerId": "939986559092"
        }, 
        {
            "Associations": [
                {
                    "SubnetId": "subnet-0867b4a561217363a", 
                    "RouteTableAssociationId": "rtbassoc-0b4a32ef9f6a27310", 
                    "Main": false, 
                    "RouteTableId": "rtb-04e106de923e27bca"
                }
            ], 
            "RouteTableId": "rtb-04e106de923e27bca", 
            "VpcId": "vpc-0b4df71f240ec8fd7", 
            "PropagatingVgws": [], 
            "Tags": [
                {
                    "Value": "stack-vpc", 
                    "Key": "aws:cloudformation:stack-name"
                }, 
                {
                    "Value": "cfn-custom-route-table", 
                    "Key": "Name"
                }, 
                {
                    "Value": "arn:aws:cloudformation:us-east-1:939986559092:stack/stack-vpc/fa0917f0-17b9-11ea-b016-12002b7e66d1", 
                    "Key": "aws:cloudformation:stack-id"
                }, 
                {
                    "Value": "CustomRouteTables", 
                    "Key": "aws:cloudformation:logical-id"
                }
            ], 
            "Routes": [
                {
                    "GatewayId": "local", 
                    "DestinationCidrBlock": "10.0.0.0/16", 
                    "State": "active", 
                    "Origin": "CreateRouteTable"
                }, 
                {
                    "GatewayId": "igw-0ba96b074c538d57f", 
                    "DestinationCidrBlock": "0.0.0.0/0", 
                    "State": "active", 
                    "Origin": "CreateRoute"
                }
            ], 
            "OwnerId": "939986559092"
        }
    ]
}
